little-issue-solve

--- a/src/scss/_storytelling.scss
+++ b/src/scss/_storytelling.scss
@@ -4,7 +4,7 @@
   align-items: center;
   display: flex;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .storytelling-scene-one {
@@ -70,7 +70,7 @@
   x: "10%";
 }
 .storytelling-horizontal {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   position: relative;
