--- a/src/scss/_flash.scss
+++ b/src/scss/_flash.scss
@@ -4,7 +4,7 @@
   align-items: center;
   display: flex;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 .flash .flash-background {
   position: absolute;
