--- a/src/scss/_starter.scss
+++ b/src/scss/_starter.scss
@@ -20,7 +20,7 @@ h1 {
   align-items: center;
   display: flex;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 .starter .starter-background {
   position: absolute;
