--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
   background: #000000;
   display: flex;
-  justify-content: center;
-  gap: 20px;
+  padding-left: 80px;
+
   padding-bottom: 70px;
 }
 .footer-texte {
@@ -27,16 +27,24 @@
 }
 .footer-info {
   display: flex;
-  width: 300px;
   flex-direction: column;
   align-items: flex-start;
   gap: 11px;
 }
 .footer-icon {
-  width: 40%;
+  width: 50%;
 }
 .footer-info-all {
   display: flex;
-  margin-left: 200px;
-  justify-content: space-between;
+  margin-left: 400px;
+  gap: 30px;
+}
+.info-product {
+  width: 50%;
+}
+.info-contact {
+  width: 110%;
+}
+.info-media {
+  width: 60%;
 }
