--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #000000;
+  background: #0c0c0c;
   display: flex;
   padding-left: 80px;
   padding-bottom: 70px;
@@ -35,15 +35,6 @@
 }
 .footer-info-all {
   display: flex;
-  margin-left: 350px;
+  margin-left: 370px;
   gap: 30px;
-}
-.info-product {
-  width: 80%;
-}
-.info-contact {
-  width: 110%;
-}
-.info-media {
-  width: 90%;
 }
