--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -14,3 +14,33 @@ video {
   width: 100%;
   height: auto;
 }
+button {
+  color: #000;
+  text-align: center;
+  font-family: regulator-nova, sans-serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 1000;
+  line-height: normal;
+  letter-spacing: 0.64px;
+  text-transform: uppercase;
+  background-color: #fffb89;
+  display: flex;
+  width: 413px;
+  height: 66.859px;
+  padding: 13px 0;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+
+  &:hover {
+    transform: scale(1.05);
+    box-shadow: 0 2px 15px #fffb89;
+  }
+
+  &:active {
+    transform: scale(0.98);
+  }
+}
