--- a/src/scss/_bd.scss
+++ b/src/scss/_bd.scss
@@ -1,5 +1,5 @@
 .bd {
-  background-color: black;
+  background-color: #0c0c0c;
   display: flex;
   align-items: center;
 }
@@ -24,36 +24,7 @@
   font-weight: 300;
   line-height: normal;
 }
-.bd-button {
-  color: #000;
-  text-align: center;
-  font-family: regulator-nova, sans-serif;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 1000;
-  line-height: normal;
-  letter-spacing: 0.64px;
-  text-transform: uppercase;
-  background-color: #fffb89;
-  display: flex;
-  width: 413px;
-  height: 66.859px;
-  padding: 13px 0;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  cursor: pointer;
-  transition: transform 0.25s ease, box-shadow 0.25s ease;
 
-  &:hover {
-    transform: scale(1.05);
-    box-shadow: 0 2px 15px #fffb89;
-  }
-
-  &:active {
-    transform: scale(0.98);
-  }
-}
 .bd-content {
   display: flex;
   flex-direction: column;
