--- a/src/scss/_bulle.scss
+++ b/src/scss/_bulle.scss
@@ -34,3 +34,9 @@
 .bulle-wrapper img {
   width: 100%;
 }
+.bulle-scene-four {
+  position: absolute;
+  bottom: 90px;
+  width: 100%;
+  z-index: 2;
+}
